Bug 1342441 - Improve the Wrong Sqlite Version message. r=asuth, a=jcristau

MozReview-Commit-ID: FVFw9XjpzOb